--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -5,5 +5,6 @@
   "promptDelete": false,
   "showLineNumber": false,
   "showInlineTitle": false,
-  "showRibbon": true
+  "showRibbon": true,
+  "foldIndent": true
 }
