--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -6,5 +6,6 @@
   "showLineNumber": false,
   "showInlineTitle": false,
   "showRibbon": true,
-  "foldIndent": true
+  "foldIndent": true,
+  "tabSize": 2
 }
