--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -8,5 +8,11 @@
   "showRibbon": true,
   "foldIndent": true,
   "tabSize": 2,
-  "attachmentFolderPath": "./_attachments"
+  "attachmentFolderPath": "./_attachments",
+  "pdfExportSettings": {
+    "pageSize": "Letter",
+    "landscape": false,
+    "margin": "0",
+    "downscalePercent": 100
+  }
 }
